--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -38,6 +38,11 @@ nav{
                 place-items: center;
                 transform: translate(80%,-80%);
             }
+            .popup{
+                background-color: white;
+                color: white;
+            }
         }
     }
 }
+ 
