--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -48,19 +48,21 @@
     }
 }
 .input{
+    background-color: white;
+    padding: 10px;
     display: flex;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    // height: 20px;
+    margin-left: 40%;
+    margin-right: 40%;
+    border-radius: 20px;
     input{
-    border: none ;
-    margin-left: 43%;
-    margin-top: 20px;
+    margin-left: 4px;
+    outline: none;
+    border: 2px solid white;
     width:200px;
-    height: 45px;
     font-weight: 500;
     font-size: medium;
-    border-radius: 4px;
-    }
-    >t{
-        color: white;
-        margin-top: 17px;
     }
 }
